# GenAI-vs-Human-Hate

./: .gitignore  .pre-commit-config.yaml  README.md  invoke.yaml  pyproject.toml  requirements.txt
data/: HSD_final_merged.csv  final_hsd_1217.csv  final_hsd_v2_1217.csv  links_to_datasets.txt
data/implicit-hate-corpus/: README.md  implicit_hate_v1_stg2.tsv  implicit_hate_v1_stg2_posts.tsv  implicit_hate_v1_stg3.tsv  implicit_hate_v1_stg3_posts.tsv
notebooks/: implicit_hate.ipynb  megaspeech_eda.ipynb  model_experiments.ipynb  toxigen_eda.ipynb
src/implihate/: __init__.py
src/implihate/core/: training.py
src/implihate/io/: data_loader.py  loader_configs.py
src/implihate/utils/: utils.py
